--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.commons-lang3-3.8.1.jar=D:\\ucanaccess\\lib\\commons-lang3-3.8.1.jar
 file.reference.commons-logging-1.2.jar=D:\\ucanaccess\\lib\\commons-logging-1.2.jar
 file.reference.hsqldb-2.5.0.jar=D:\\ucanaccess\\lib\\hsqldb-2.5.0.jar
+file.reference.itextpdf-5.5.13.3.jar=..\\..\\openpdf\\jar_files\\itextpdf-5.5.13.3.jar
 file.reference.jackcess-3.0.1.jar=D:\\ucanaccess\\lib\\jackcess-3.0.1.jar
 file.reference.mysql-connector-j-9.0.0.jar=D:\\MySQL\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
 file.reference.ucanaccess-5.0.1.jar=D:\\ucanaccess\\lib\\ucanaccess-5.0.1.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.hsqldb-2.5.0.jar}:\
     ${file.reference.jackcess-3.0.1.jar}:\
     ${file.reference.ucanaccess-5.0.1.jar}:\
-    ${file.reference.mysql-connector-j-9.0.0.jar}
+    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.itextpdf-5.5.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
